# ner-d

./: .gitignore  README.md  convert.py  download.sh  hf-publish.py  project.yml  pyproject.toml  requirements.txt
configs/: ner-d-dist.cfg  ner-d-lg.cfg
scripts/: convert.py  train.py
